--- a/trello-web/package.json
+++ b/trello-web/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "apisauce": "^1.1.1",
     "bootstrap": "^4.3.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
