--- a/trello-web/package.json
+++ b/trello-web/package.json
@@ -9,13 +9,15 @@
     "@types/react-dom": "16.9.2",
     "apisauce": "^1.1.1",
     "bootstrap": "^4.3.1",
+    "formik": "^2.0.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-trello": "^2.2.3",
     "reactstrap": "^8.1.1",
-    "typescript": "3.6.4"
+    "typescript": "3.6.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
