--- a/trello-web/package.json
+++ b/trello-web/package.json
@@ -17,7 +17,8 @@
     "react-trello": "^2.2.3",
     "reactstrap": "^8.1.1",
     "typescript": "3.6.4",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "react-toastify": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
