--- a/trello-web/package.json
+++ b/trello-web/package.json
@@ -7,6 +7,10 @@
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/reactstrap": "^8.0.6",
+    "@types/styled-components": "^4.4.0",
+    "@types/yup": "^0.26.25",
     "apisauce": "^1.1.1",
     "bootstrap": "^4.3.1",
     "formik": "^2.0.6",
@@ -14,11 +18,12 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "latest",
     "react-trello": "^2.2.3",
     "reactstrap": "^8.1.1",
+    "styled-components": "^4.4.1",
     "typescript": "3.6.4",
-    "yup": "^0.27.0",
-    "react-toastify": "latest"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
