--- a/trello-web/package.json
+++ b/trello-web/package.json
@@ -21,6 +21,8 @@
     "react-toastify": "latest",
     "react-trello": "^2.2.3",
     "reactstrap": "^8.1.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.4.1",
     "typescript": "3.6.4",
     "yup": "^0.27.0"
