--- a/trello-web/package.json
+++ b/trello-web/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.19",
+    "@types/lodash": "^4.14.149",
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
+    "@types/react-datepicker": "^2.10.0",
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.0",
     "@types/yup": "^0.26.25",
     "apisauce": "^1.1.1",
+    "datejs": "^1.0.0-rc3",
+    "dayjs": "^1.8.19",
     "formik": "^2.0.6",
+    "lodash": "^4.17.15",
     "react": "^16.11.0",
+    "react-datepicker": "^2.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
